[package]
name = "poetisa-audio-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
kira = "0.9.6"  # For audio management
tokio = { version = "1.41", features = ["full"] }  # For asynchronous runtime
warp = "0.3.6"  # For WebSocket server
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization

